@@ -736,6 +736,15 @@ name|SOLR_LOG_MUTECONSOLE
 init|=
 literal|"solr.log.muteconsole"
 decl_stmt|;
+DECL|field|SOLR_LOG_LEVEL
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|SOLR_LOG_LEVEL
+init|=
+literal|"solr.log.level"
+decl_stmt|;
 annotation|@
 name|Override
 DECL|method|init
@@ -813,21 +822,31 @@ name|muteConsole
 argument_list|()
 expr_stmt|;
 block|}
-name|log
+name|String
+name|logLevel
+init|=
+name|System
 operator|.
-name|info
+name|getProperty
 argument_list|(
-literal|"SolrDispatchFilter.init(): {}"
-argument_list|,
-name|this
+name|SOLR_LOG_LEVEL
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|logLevel
+operator|!=
+literal|null
+condition|)
+block|{
+name|StartupLoggingUtils
 operator|.
-name|getClass
-argument_list|()
-operator|.
-name|getClassLoader
-argument_list|()
+name|changeLogLevel
+argument_list|(
+name|logLevel
 argument_list|)
 expr_stmt|;
+block|}
 name|String
 name|exclude
 init|=
