@@ -70,6 +70,18 @@ name|apache
 operator|.
 name|log4j
 operator|.
+name|Level
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|log4j
+operator|.
 name|LogManager
 import|;
 end_import
@@ -278,6 +290,89 @@ block|{
 name|logNotSupported
 argument_list|(
 literal|"Could not mute logging to console."
+argument_list|)
+expr_stmt|;
+return|return
+literal|false
+return|;
+block|}
+block|}
+comment|/**    * Dynamically change log4j log level through property solr.log.level    * @param logLevel String with level, should be one of the supported, e.g. TRACE, DEBUG, INFO, WARN, ERROR...    * @return true if ok or else false if something happened, e.g. log4j classes were not in classpath    */
+annotation|@
+name|SuppressForbidden
+argument_list|(
+name|reason
+operator|=
+literal|"Legitimate log4j access"
+argument_list|)
+DECL|method|changeLogLevel
+specifier|static
+name|boolean
+name|changeLogLevel
+parameter_list|(
+name|String
+name|logLevel
+parameter_list|)
+block|{
+try|try
+block|{
+if|if
+condition|(
+operator|!
+name|isLog4jActive
+argument_list|()
+condition|)
+block|{
+name|logNotSupported
+argument_list|(
+literal|"Could not mute logging to console."
+argument_list|)
+expr_stmt|;
+return|return
+literal|false
+return|;
+block|}
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"Log level override, property solr.log.level="
+operator|+
+name|logLevel
+argument_list|)
+expr_stmt|;
+name|LogManager
+operator|.
+name|getRootLogger
+argument_list|()
+operator|.
+name|setLevel
+argument_list|(
+name|Level
+operator|.
+name|toLevel
+argument_list|(
+name|logLevel
+argument_list|,
+name|Level
+operator|.
+name|INFO
+argument_list|)
+argument_list|)
+expr_stmt|;
+return|return
+literal|true
+return|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+name|logNotSupported
+argument_list|(
+literal|"Could not change log level."
 argument_list|)
 expr_stmt|;
 return|return
