@@ -1,4 +1,5 @@
-#  Logging level
+# Default Solr log4j config
+# rootLogger log level may be programmatically overridden by -Dsolr.log.level
 solr.log=logs
 log4j.rootLogger=INFO, file, CONSOLE
 
@@ -17,11 +18,12 @@ log4j.appender.file.File=${solr.log}/solr.log
 log4j.appender.file.layout=org.apache.log4j.EnhancedPatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5p (%t) [%X{collection} %X{shard} %X{replica} %X{core}] %c{1.} %m%n
 
+# Adjust logging levels that should differ from root logger
 log4j.logger.org.apache.zookeeper=WARN
 log4j.logger.org.apache.hadoop=WARN
 log4j.logger.org.eclipse.jetty=WARN
-log4j.logger.org.eclipse.jetty.server=INFO
-log4j.logger.org.eclipse.jetty.server.handler=WARN
+log4j.logger.org.eclipse.jetty.server.Server=INFO
+log4j.logger.org.eclipse.jetty.server.ServerConnector=INFO
 
 # set to INFO to enable infostream log messages
 log4j.logger.org.apache.solr.update.LoggingInfoStream=OFF
